Extra todo items unrelated to meeting

--- a/todo.txt
+++ b/todo.txt
@@ -3,7 +3,10 @@
   - default directory: C:\Users\Public\Documents\Autodesk\Inventor 2016\Design Data\iLogic\UI
 - add I:\Cadd\_iLogic\Export to External Rule Directories in Tools>Options>iLogic Configuration (in dropdown) for all Inventor installations
 
+- troubleshoot 60partplant_export not adding serial numbers even though the conditions evaluate true
 - need to update process - using part numbers from species population (i.e., the Part Custom iProperties); the Part Number Project iProperty will just be the drawing number
 - will need to add a part for both the actual part and the raw material (user-input in the species selection process)
 - export logic - Inventor export will only be used to initially populate Epicor with a part, not for future revisions - so check whether the part already exists in the DB and abort if so
   - raw materials still get added AND updated through Inventor
+
+- expand process to include Quoting spreadsheet generation (see example in N:\CompanyResources\Quoting\Rejuvenation\Island Collection\RM Spreadsheets)
